--- a/Keyhanatr/Views/Home/Index.cshtml
+++ b/Keyhanatr/Views/Home/Index.cshtml
@@ -5,45 +5,45 @@
 
 @section navbar
 {
-    <partial name="_Navbar"></partial>
+    <partial name="_Navbar"/>
 }
 
 @section slider
 {
-    <partial name="_Carousel"></partial>
+    <partial name="_Carousel"/>
 }
 
 @section popularcategories
 {
-    <partial name="_PopularCategpries"></partial>
+    <partial name="_PopularCategpries"/>
 }
 
 @section products
 {
-    <partial name="_Products"></partial>
+    <partial name="_Products"/>
 }
 
 @section banners
 {
-    <partial name="_Banner"></partial>
+    <partial name="_Banner"/>
 }
 
 @section featurecategory
 {
-    <partial name="_FeatureCategory"></partial>
+    <partial name="_FeatureCategory"/>
 }
 
 @section brands
 {
-    <partial name="_Brands"></partial>
+    <partial name="_Brands"/>
 }
 
 @section bloginsta
 {
-    <partial name="_bloginsta"></partial>
+    <partial name="_bloginsta"/>
 }
 
 @section footer
 {
-    <partial name="_Footer"></partial>
+    <partial name="_Footer"/>
 }
