--- a/Keyhanatr/Views/Shared/_Navbar.cshtml
+++ b/Keyhanatr/Views/Shared/_Navbar.cshtml
@@ -435,6 +435,9 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="nav-link"><i class='icon bx bxs-dashboard'></i><label>پنل مدیریت سایت</label></a>
+                        </li>
                     </ul>
                 </div>
             </div>
