--- a/Keyhanatr/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -12,17 +12,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon and Touch Icons-->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="/image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="/image/png" sizes="16x16" href="favicon-16x16.png">
 
     <link rel="mask-icon" color="#fe6a6a" href="safari-pinned-tab.svg">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
-    <link rel="stylesheet" media="screen" href="vendor/simplebar/dist/simplebar.min.css" />
-    <link rel="stylesheet" media="screen" href="vendor/tiny-slider/dist/tiny-slider.css" />
+    <link rel="stylesheet" media="screen" href="/vendor/simplebar/dist/simplebar.min.css" />
+    <link rel="stylesheet" media="screen" href="/vendor/tiny-slider/dist/tiny-slider.css" />
     <!-- Main Theme Styles + Bootstrap-->
-    <link rel="stylesheet" media="screen" href="css/theme.min.css">
+    <link rel="stylesheet" media="screen" href="/css/theme.min.css">
     <!-- Google Tag Manager-->
 
 </head>
@@ -110,11 +110,11 @@
                 <div class="modal-body">
                     <div class="form-check mb-4">
                         <input class="form-check-input" type="radio" id="paypal" name="payment-method">
-                        <label class="form-check-label" for="paypal">پی پال<img class="d-inline-block align-middle ms-2" src="img/card-paypal.png" width="39" alt="PayPal"></label>
+                        <label class="form-check-label" for="paypal">پی پال<img class="d-inline-block align-middle ms-2" src="/img/card-paypal.png" width="39" alt="PayPal"></label>
                     </div>
                     <div class="form-check mb-4">
                         <input class="form-check-input" type="radio" id="card" name="payment-method" checked>
-                        <label class="form-check-label" for="card">کارت اعتباری/نقدی<img class="d-inline-block align-middle ms-2" src="img/cards.png" width="187" alt="Credit card"></label>
+                        <label class="form-check-label" for="card">کارت اعتباری/نقدی<img class="d-inline-block align-middle ms-2" src="/img/cards.png" width="187" alt="Credit card"></label>
                     </div>
                     <div class="row g-3 mb-2">
                         <div class="col-sm-6">
@@ -146,7 +146,7 @@
     <header class="bg-light shadow-sm navbar-sticky">
         <div class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand d-none d-sm-block flex-shrink-0 me-4 order-lg-1" href="index.html"><img src="img/logo-dark.png" width="142" alt="Cartzilla"></a><a class="navbar-brand d-sm-none me-2 order-lg-1" href="index.html"><img src="img/logo-icon.png" width="74" alt="Cartzilla"></a>
+                <a class="navbar-brand d-none d-sm-block flex-shrink-0 me-4 order-lg-1" href="index.html"><img src="/img/logo-dark.png" width="142" alt="Cartzilla"></a><a class="navbar-brand d-sm-none me-2 order-lg-1" href="index.html"><img src="/img/logo-icon.png" width="74" alt="Cartzilla"></a>
                 <!-- Toolbar-->
                 <div class="navbar-toolbar d-flex align-items-center order-lg-3">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"><span class="navbar-toggler-icon"></span></button><a class="navbar-tool d-none d-lg-flex" href="javascript:void(0)" data-bs-toggle="collapse" data-bs-target="#searchBox" role="button" aria-expanded="false" aria-controls="searchBox">
@@ -157,7 +157,7 @@
                         <div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-heart"></i></div>
                     </a>
                     <div class="navbar-tool dropdown ms-2">
-                        <a class="navbar-tool-icon-box border dropdown-toggle" href="dashboard-sales.html"><img src="img/marketplace/account/avatar-sm.png" width="32" alt="گروه ستین"></a><a class="navbar-tool-text ms-n1" href="dashboard-sales.html"><small>امتیاز</small>137500</a>
+                        <a class="navbar-tool-icon-box border dropdown-toggle" href="dashboard-sales.html"><img src="/img/marketplace/account/avatar-sm.png" width="32" alt="گروه ستین"></a><a class="navbar-tool-text ms-n1" href="dashboard-sales.html"><small>امتیاز</small>137500</a>
                         <div class="dropdown-menu dropdown-menu-end">
                             <div style="min-width: 14rem;">
                                 <h6 class="dropdown-header">حساب کاربری</h6><a class="dropdown-item d-flex align-items-center" href="dashboard-settings.html"><i class="ci-settings opacity-60 me-2"></i>تنظیمات</a><a class="dropdown-item d-flex align-items-center" href="dashboard-purchases.html"><i class="ci-basket opacity-60 me-2"></i>خرید</a><a class="dropdown-item d-flex align-items-center" href="dashboard-favorites.html"><i class="ci-heart opacity-60 me-2"></i>علاقه مندی<span class="fs-xs text-muted ms-auto">4</span></a>
@@ -292,7 +292,7 @@
     <div class="page-title-overlap bg-accent pt-4">
         <div class="container d-flex flex-wrap flex-sm-nowrap justify-content-center justify-content-sm-between align-items-center pt-2">
             <div class="d-flex align-items-center pb-3">
-                <div class="img-thumbnail rounded-circle position-relative flex-shrink-0" style="width: 6.375rem;"><img class="rounded-circle" src="img/marketplace/account/avatar.png" alt="گروه ستین"></div>
+                <div class="img-thumbnail rounded-circle position-relative flex-shrink-0" style="width: 6.375rem;"><img class="rounded-circle" src="/img/marketplace/account/avatar.png" alt="گروه ستین"></div>
                 <div class="ps-3">
                     <h3 class="text-light fs-lg mb-0">گروه ستین</h3><span class="d-block text-light fs-ms opacity-60 py-1">عضویت از تیر 1400 </span>
                 </div>
@@ -356,7 +356,7 @@
         <div class="container pt-2 pb-3">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-4">
-                    <div class="text-nowrap mb-3"><a class="d-inline-block align-middle mt-n2 me-2" href="#"><img class="d-block" src="img/footer-logo-light.png" width="117" alt="Cartzilla"></a><span class="d-inline-block align-middle h5 fw-light text-white mb-0">بازار</span></div>
+                    <div class="text-nowrap mb-3"><a class="d-inline-block align-middle mt-n2 me-2" href="#"><img class="d-block" src="/img/footer-logo-light.png" width="117" alt="Cartzilla"></a><span class="d-inline-block align-middle h5 fw-light text-white mb-0">بازار</span></div>
                     <p class="fs-sm text-white opacity-70 pb-1">موارد با کیفیت بالا که توسط جامعه جهانی ما ایجاد شده است.</p>
                     <h6 class="d-inline-block pe-3 me-3 border-end border-light"><span class="text-primary">65,478 </span><span class="fw-normal text-white">محصولات</span></h6>
                     <h6 class="d-inline-block pe-3 me-3 border-end border-light"><span class="text-primary">2,521 </span><span class="fw-normal text-white">کاربران</span></h6>
@@ -458,11 +458,11 @@
     </div>
     <!-- Back To Top Button--><a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">بالا</span><i class="btn-scroll-top-icon ci-arrow-up">   </i></a>
     <!-- Vendor scrits: js libraries and plugins-->
-    <script src="vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/simplebar/dist/simplebar.min.js"></script>
-    <script src="vendor/tiny-slider/dist/min/tiny-slider.js"></script>
-    <script src="vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/simplebar/dist/simplebar.min.js"></script>
+    <script src="/vendor/tiny-slider/dist/min/tiny-slider.js"></script>
+    <script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
     <!-- Main theme script-->
-    <script src="js/theme.min.js"></script>
+    <script src="/js/theme.min.js"></script>
 </body>
 </html>
