complete ProductGroupsController.cs

--- a/Keyhanatr/Areas/Admin/Views/ProductGroups/Index.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductGroups/Index.cshtml
@@ -29,9 +29,9 @@
                             @Html.DisplayFor(modelItem => item.GroupTitle)
                         </td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.GroupId">Edit</a> |
-                            <a asp-action="Details" asp-route-id="@item.GroupId">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.GroupId">Delete</a>
+                            <a asp-action="Edit" asp-route-id="@item.GroupId">ویرایش</a> |
+                            <a asp-action="Details" asp-route-id="@item.GroupId">جزییات</a> |
+                            <a asp-action="Delete" asp-route-id="@item.GroupId">حذف</a>
                         </td>
                     </tr>
                 }
