--- a/Keyhanatr/Areas/Admin/Views/ProductGroups/Create.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductGroups/Create.cshtml
@@ -9,38 +9,31 @@
 <h4>گروه اصلی</h4>
 <hr />
 <div class="row">
-    <div class="col-md-8">
-        @*<form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="GroupTitle" class="control-label"></label>
-                    <input asp-for="GroupTitle" class="form-control" />
-                    <span asp-validation-for="GroupTitle" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>*@
-    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <form asp-action="Create">
+                <div class="mb-3 pb-2">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label class="form-label" asp-for="GroupTitle"></label>
+                        <input class="form-control" asp-for="GroupTitle" />
+                        <div class="form-text">حداکثر 100 حرف هیچ L یا شکلک مجاز نیست.</div>
+                        <span asp-validation-for="GroupTitle" class="text-danger"></span>
+                    </div>
 
-    <div class="mb-3 pb-2">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label class="form-label" asp-for="GroupTitle"></label>
-            <input class="form-control" asp-for="GroupTitle" />
-            <div class="form-text">حداکثر 100 حرف هیچ L یا شکلک مجاز نیست.</div>
-            <span asp-validation-for="GroupTitle" class="text-danger"></span>
+                    <div class="form-group">
+                        <button class="btn btn-success d-block w-100" type="submit">  ثبت گروه جدید</button>
+                    </div>
+                </div>
+            </form>
         </div>
 
-        <div class="form-group">
-            <button class="btn btn-primary d-block w-100" type="submit"> ثبت گروه</button>
+        <div>
+            <a asp-action="Index">بازگشت به لیست گروه ها</a>
         </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">بازگشت به لیست گروه ها</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
