--- a/Keyhanatr/Areas/Admin/Views/ProductGroups/Delete.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductGroups/Delete.cshtml
@@ -4,24 +4,23 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>حذف آیتم مورد نظر </h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<div class="alert alert-danger"> آیا از حذف <strong><strong>" @Html.DisplayFor(model => model.GroupTitle) "</strong></strong> اطمینان دارید؟ </div>
 <div>
-    <h4>ProductGroup</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.GroupTitle)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.GroupTitle)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="GroupId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="تایید حذف" class="btn btn btn-danger" />
+        <div class="form-group"><a asp-action="Index">برگشت به لیست گروه اصلی</a></div>
     </form>
 </div>
