--- a/Keyhanatr/Areas/Admin/Views/ProductGroups/Edit.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductGroups/Edit.cshtml
@@ -1,32 +1,36 @@
 ﻿@model Keyhanatr.Data.Domain.Products.ProductGroup
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "ویرایش";
 }
 
-<h1>Edit</h1>
+<h1>ویرایش</h1>
 
-<h4>ProductGroup</h4>
+<h4>آیتم مورد نظر را ویرایش کنید</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="GroupId" />
-            <div class="form-group">
-                <label asp-for="GroupTitle" class="control-label"></label>
-                <input asp-for="GroupTitle" class="form-control" />
-                <span asp-validation-for="GroupTitle" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="mb-3 pb-2">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label class="form-label" asp-for="GroupTitle"></label>
+                    <input class="form-control" asp-for="GroupTitle" />
+                    <div class="form-text">حداکثر 100 حرف هیچ L یا شکلک مجاز نیست.</div>
+                    <span asp-validation-for="GroupTitle" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <button class="btn btn-warning d-block w-100" type="submit"> ویرایش گروه</button>
+                </div>
             </div>
         </form>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a asp-action="Index">بازگشت به لیست گروه ها</a>
+    </div>
 </div>
 
 @section Scripts {
