complete ProductSubGroupsController And edite "Delete method" of ProductGroupsController.cs

--- a/Keyhanatr/Areas/Admin/Views/ProductGroups/Details.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductGroups/Details.cshtml
@@ -1,17 +1,16 @@
 ﻿@model Keyhanatr.Data.Domain.Products.ProductGroup
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "جزییات گروه";
 }
 
-<h1>Details</h1>
+<h1>جزییات گروه اصلی</h1>
 
-<div>
-    <h4>ProductGroup</h4>
+<div class="form-group">
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GroupTitle)
+            @Html.DisplayNameFor(model => model.GroupTitle) :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.GroupTitle)
@@ -19,6 +18,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.GroupId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.GroupId">ویرایش</a> |
+    <a asp-action="Index">بازگشت به لیست گروه ها</a>
 </div>
