--- a/Keyhanatr/Areas/Admin/Views/ProductSubGroups/Edit.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductSubGroups/Edit.cshtml
@@ -14,8 +14,8 @@
             <input type="hidden" asp-for="SubGroupId" />
             <div class="form-group">
                 <label for="ProductGroupId" class="control-label">عنوان گروه اصلی را از لیست زیر انتخاب کنید:</label>
-                <select id="ProductGroupId" asp-for="ProductGroupId" class="form-control" asp-items="ViewBag.ProductGroupId"></select>
-                <span asp-validation-for="ProductGroupId" class="text-danger"></span>
+                <select id="ProductGroupId" asp-for="GroupId" class="form-control" asp-items="ViewBag.ProductGroupId"></select>
+                <span asp-validation-for="GroupId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SubGroupTitle" class="control-label"></label>
