--- a/Keyhanatr/Views/Account/ResetPassword.cshtml
+++ b/Keyhanatr/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,7 @@
-﻿@model Keyhanatr.Data.ViewModels.Account.RegisterViewModel
+﻿@model Keyhanatr.Data.ViewModel.Account.ResetPasswordViewModel
+
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "ResetPassword";
 }
 
 <div class="container py-4 py-lg-5 my-4">
@@ -8,28 +9,24 @@
         <div class="col-md-6 offset-lg-3">
             <div class="card border-0 shadow">
                 <div class="card-body">
-                    <h2 class="h4 mb-1" style="text-align:center;">هیچ حسابی ندارید؟ ثبت نام</h2>
+                    <h2 class="h4 mb-1" style="text-align:center;">بازنشانی کلمه عبور</h2>
                     <br />
                     <hr>
-                    <h3 class="fs-base pt-4 pb-2" style="text-align:center;"> کاربر عزیز لطفاً اطلاعات خود را با دقت را وارد نمائید</h3>
-                  
-                    <form asp-action="Register" class="needs-validation" novalidate>
+                    <h3 class="fs-base pt-4 pb-2" style="text-align:center;"> کاربر عزیز لطفاً کد پیامک شده و کلمه عبور جدید را وارد نمایید.</h3>
+
+                    <form asp-action="ResetPassword" class="needs-validation" novalidate>
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
                         <div class="input-group mb-3">
                             <i class="ci-user position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
-                            <input asp-for="UserName" class="form-control rounded-start" type="text" placeholder="نام کاربری" required>
-                            <span asp-validation-for="UserName" class="text-danger"></span>
+                            <input asp-for="ActiveCode" class="form-control rounded-start" type="text" placeholder="کد پیامکی" required>
+                            <span asp-validation-for="ActiveCode" class="text-danger"></span>
                         </div>
-                        <div class="input-group mb-3">
-                            <i class="ci-mobile position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
-                            <input asp-for="Mobile" class="form-control rounded-start" type="tel" placeholder="شماره همراه" required>
-                            <span asp-validation-for="Mobile" class="text-danger"></span>
-                            @*<div class="invalid-feedback">شماره تلفن را وارد کنید</div>*@
-                        </div>
+                        
                         <div class="input-group mb-3">
                             <i class="ci-locked position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
                             <div class="password-toggle w-100">
-                                <input asp-for="Password" class="form-control" type="password" placeholder="کلمه عبور" required>
+                                <input asp-for="Password" class="form-control" type="password" placeholder="کلمه عبور جدید" required>
                                 <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
                                     <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
                                 </label>
@@ -39,7 +36,7 @@
                         <div class="input-group mb-3">
                             <i class="ci-locked position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
                             <div class="password-toggle w-100">
-                                <input asp-for="RePassword" class="form-control" type="password" placeholder="تکرار کلمه عبور" required>
+                                <input asp-for="RePassword" class="form-control" type="password" placeholder="تکرار کلمه عبور جدید" required>
                                 <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
                                     <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
                                 </label>
@@ -47,7 +44,7 @@
                             </div>
                         </div>
                         <div class="col-12 text-end">
-                            <button class="btn btn-primary" type="submit"><i class="ci-user me-2 ms-n1"></i>ثبت نام</button>
+                            <button class="btn btn-primary" type="submit"><i class="ci-user me-2 ms-n1"></i>ثبت کلمه عبور</button>
                         </div>
                     </form>
                     <br />
@@ -67,7 +64,8 @@
     </div>
 </div>
 
+
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
