--- a/Keyhanatr/Areas/UserPanel/Views/Home/Index.cshtml
+++ b/Keyhanatr/Areas/UserPanel/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿
 @{
+
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h1>Index</h1>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
