--- a/Keyhanatr/Views/Account/Login.cshtml
+++ b/Keyhanatr/Views/Account/Login.cshtml
@@ -9,37 +9,41 @@
         <div class="col-md-6 offset-lg-3">
             <div class="card border-0 shadow">
                 <div class="card-body">
-                    <h2 class="h4 mb-1">ورود</h2>
-                    <div class="py-3">
-                        <h3 class="d-inline-block align-middle fs-base fw-medium mb-2 me-2">با حساب اجتماعی: </h3>
-                        <div class="d-inline-block align-middle"><a class="btn-social bs-google me-2 mb-2" href="#" data-bs-toggle="tooltip" title="گوگل"><i class="ci-google"></i></a><a class="btn-social bs-facebook me-2 mb-2" href="#" data-bs-toggle="tooltip" title="فیسبوک"><i class="ci-facebook"></i></a><a class="btn-social bs-twitter me-2 mb-2" href="#" data-bs-toggle="tooltip" title="توئیتر"><i class="ci-twitter"></i></a></div>
-                    </div>
+                    <h2 class="h4 mb-1" style="text-align:center;">فرم ورود به سایت</h2>
+                    @*<div class="py-3">
+                            <h3 class="d-inline-block align-middle fs-base fw-medium mb-2 me-2">با حساب اجتماعی: </h3>
+                            <div class="d-inline-block align-middle"><a class="btn-social bs-google me-2 mb-2" href="#" data-bs-toggle="tooltip" title="گوگل"><i class="ci-google"></i></a><a class="btn-social bs-facebook me-2 mb-2" href="#" data-bs-toggle="tooltip" title="فیسبوک"><i class="ci-facebook"></i></a><a class="btn-social bs-twitter me-2 mb-2" href="#" data-bs-toggle="tooltip" title="توئیتر"><i class="ci-twitter"></i></a></div>
+                        </div>*@
+                    <br />
                     <hr>
-                    <h3 class="fs-base pt-4 pb-2">یا از فرم زیر استفاده کنید</h3>
+                    <h3 class="fs-base pt-4 pb-2" style="text-align:center;"> لطفاً شماره همراه و کلمه عبور خود را وارد نمائید</h3>
                     <form asp-action="Login" class="needs-validation" novalidate>
+                        <input type="hidden" value="@ViewBag.ret" name="ReturnUrl" />
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                       
                         <div class="input-group mb-3">
                             <i class="ci-user position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
-                            <input asp-for="UserName" class="form-control rounded-start" type="text" placeholder="نام کاربری" required>
-                            <span asp-validation-for="UserName" class="text-danger"></span>
+                            <input asp-for="Mobile" class="form-control rounded-start" type="tel" placeholder="شماره همراه" required>
+                            <span asp-validation-for="Mobile" class="text-danger"></span>
                         </div>
                         <div class="input-group mb-3">
                             <i class="ci-locked position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
                             <div class="password-toggle w-100">
-                                <input asp-for="Password" class="form-control" type="password" placeholder="پسورد" required>
+                                <input asp-for="Password" class="form-control" placeholder="کلمه عبور" required>
                                 <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
                                     <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
                                 </label>
                                 <span asp-validation-for="Password" class="text-danger"></span>
                             </div>
                         </div>
+
                         <div class="d-flex flex-wrap justify-content-between">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" checked id="remember_me">
-                                <label class="form-check-label" asp-for="RememberMe">
-                                    <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
-                                </label>
-                            </div><a class="nav-link-inline fs-sm" href="">فراموشی رمز؟</a>
+                                @*<label class="form-check-label" asp-for="RememberMe">*@
+                                <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
+                                @*</label>*@
+                            </div><a class="nav-link-inline fs-sm" href="GetMobile">فراموشی رمز؟</a>
                         </div>
                         <hr class="mt-4">
                         <div class="text-end pt-4">
@@ -63,29 +67,7 @@
     </div>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 
-@*<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>*@
