--- a/Keyhanatr/Views/Shared/_Layout.cshtml
+++ b/Keyhanatr/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -14,91 +13,21 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-
     <link rel="mask-icon" color="#fe6a6a" href="safari-pinned-tab.svg">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
-    <link rel="stylesheet" media="screen" href="vendor/simplebar/dist/simplebar.min.css" />
-    <link rel="stylesheet" media="screen" href="vendor/tiny-slider/dist/tiny-slider.css" />
-    <link rel="stylesheet" media="screen" href="vendor/drift-zoom/dist/drift-basic.min.css" />
+    <link rel="stylesheet" media="screen" href="/vendor/simplebar/dist/simplebar.min.css" />
+    <link rel="stylesheet" media="screen" href="/vendor/tiny-slider/dist/tiny-slider.css" />
+    <link rel="stylesheet" media="screen" href="/vendor/drift-zoom/dist/drift-basic.min.css" />
     <!-- Main Theme Styles + Bootstrap-->
-    <link rel="stylesheet" media="screen" href="css/theme.min.css">
+    <link rel="stylesheet" media="screen" href="/css/theme.min.css">
     <!-- Google Tag Manager-->
-
 </head>
 <!-- Body-->
 <body class="handheld-toolbar-enabled">
     <!-- Google Tag Manager (noscript)-->
     <!-- Sign in / sign up modal-->
-    @*<div class="modal fade" id="signin-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-secondary">
-                    <ul class="nav nav-tabs card-header-tabs" role="tablist">
-                        <partial name="_LoggedIn" />
-                    </ul>
-                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body tab-content py-4">
-                    <form class="needs-validation tab-pane fade show active" autocomplete="off" novalidate id="signin-tab">
-                        <div class="mb-3">
-                            <label class="form-label" for="si-email">آدرس ایمیل</label>
-                            <input class="form-control" type="email" id="si-email" placeholder="Setin@gmail.com" required>
-                            <div class="invalid-feedback">لطفا آدر س ایمیل را وارد کنید</div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="si-password">پسورد</label>
-                            <div class="password-toggle">
-                                <input class="form-control" type="password" id="si-password" required>
-                                <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
-                                    <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="mb-3 d-flex flex-wrap justify-content-between">
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" id="si-remember">
-                                <label class="form-check-label" for="si-remember">مرا به خاطر بسپار</label>
-                            </div><a class="fs-sm" href="#">فراموشی رمز؟</a>
-                        </div>
-                        <button class="btn btn-primary btn-shadow d-block w-100" type="submit">ورود</button>
-                    </form>
-                    <form class="needs-validation tab-pane fade" autocomplete="off" novalidate id="signup-tab">
-                        <div class="mb-3">
-                            <label class="form-label" for="su-name">نام</label>
-                            <input class="form-control" type="text" id="su-name" placeholder="ستین" required>
-                            <div class="invalid-feedback">لطفا نام را وارد کنید</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="su-email">آدرس ایمیل</label>
-                            <input class="form-control" type="email" id="su-email" placeholder="Setin@gmail.com" required>
-                            <div class="invalid-feedback">لطفا آدر س ایمیل را وارد کنید</div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="su-password">پسورد</label>
-                            <div class="password-toggle">
-                                <input class="form-control" type="password" id="su-password" required>
-                                <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
-                                    <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="su-password-confirm">تکرار پسورد</label>
-                            <div class="password-toggle">
-                                <input class="form-control" type="password" id="su-password-confirm" required>
-                                <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
-                                    <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                                </label>
-                            </div>
-                        </div>
-                        <button class="btn btn-primary btn-shadow d-block w-100" type="submit">ثبت نام</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>*@
     <!-- مشاهده Modal-->
     <div class="modal-quick-view modal fade" id="quick-view" tabindex="-1">
         <div class="modal-dialog modal-xl">
@@ -114,23 +43,23 @@
                             <div class="product-gallery">
                                 <div class="product-gallery-preview order-sm-2">
                                     <div class="product-gallery-preview-item active" id="first">
-                                        <img class="image-zoom" src="img/shop/single/gallery/01.jpg" data-zoom="img/shop/single/gallery/01.jpg" alt="Product image">
+                                        <img class="image-zoom" src="/img/shop/single/gallery/01.jpg" data-zoom="img/shop/single/gallery/01.jpg" alt="Product image">
                                         <div class="image-zoom-pane"></div>
                                     </div>
                                     <div class="product-gallery-preview-item" id="second">
-                                        <img class="image-zoom" src="img/shop/single/gallery/02.jpg" data-zoom="img/shop/single/gallery/02.jpg" alt="Product image">
+                                        <img class="image-zoom" src="/img/shop/single/gallery/02.jpg" data-zoom="img/shop/single/gallery/02.jpg" alt="Product image">
                                         <div class="image-zoom-pane"></div>
                                     </div>
                                     <div class="product-gallery-preview-item" id="third">
-                                        <img class="image-zoom" src="img/shop/single/gallery/03.jpg" data-zoom="img/shop/single/gallery/03.jpg" alt="Product image">
+                                        <img class="image-zoom" src="/img/shop/single/gallery/03.jpg" data-zoom="img/shop/single/gallery/03.jpg" alt="Product image">
                                         <div class="image-zoom-pane"></div>
                                     </div>
                                     <div class="product-gallery-preview-item" id="fourth">
-                                        <img class="image-zoom" src="img/shop/single/gallery/04.jpg" data-zoom="img/shop/single/gallery/04.jpg" alt="Product image">
+                                        <img class="image-zoom" src="/img/shop/single/gallery/04.jpg" data-zoom="img/shop/single/gallery/04.jpg" alt="Product image">
                                         <div class="image-zoom-pane"></div>
                                     </div>
                                 </div>
-                                <div class="product-gallery-thumblist order-sm-1"><a class="product-gallery-thumblist-item active" href="#first"><img src="img/shop/single/gallery/th01.jpg" alt="Product thumb"></a><a class="product-gallery-thumblist-item" href="#second"><img src="img/shop/single/gallery/th02.jpg" alt="Product thumb"></a><a class="product-gallery-thumblist-item" href="#third"><img src="img/shop/single/gallery/th03.jpg" alt="Product thumb"></a><a class="product-gallery-thumblist-item" href="#fourth"><img src="img/shop/single/gallery/th04.jpg" alt="Product thumb"></a></div>
+                                <div class="product-gallery-thumblist order-sm-1"><a class="product-gallery-thumblist-item active" href="#first"><img src="/img/shop/single/gallery/th01.jpg" alt="Product thumb"></a><a class="product-gallery-thumblist-item" href="#second"><img src="/img/shop/single/gallery/th02.jpg" alt="Product thumb"></a><a class="product-gallery-thumblist-item" href="#third"><img src="/img/shop/single/gallery/th03.jpg" alt="Product thumb"></a><a class="product-gallery-thumblist-item" href="#fourth"><img src="/img/shop/single/gallery/th04.jpg" alt="Product thumb"></a></div>
                             </div>
                         </div>
                         <!-- جزئیات محصول-->
@@ -244,19 +173,15 @@
     </div>
     <!-- Back To Top Button--><a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">بالا</span><i class="btn-scroll-top-icon ci-arrow-up">   </i></a>
     <!-- Vendor scrits: js libraries and plugins-->
-    <script src="vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/simplebar/dist/simplebar.min.js"></script>
-    <script src="vendor/tiny-slider/dist/min/tiny-slider.js"></script>
-    <script src="vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <script src="vendor/drift-zoom/dist/Drift.min.js"></script>
+    <script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/simplebar/dist/simplebar.min.js"></script>
+    <script src="/vendor/tiny-slider/dist/min/tiny-slider.js"></script>
+    <script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="/vendor/drift-zoom/dist/Drift.min.js"></script>
     <!-- Main theme script-->
-    <script src="js/theme.min.js"></script>
+    <script src="/js/theme.min.js"></script>
 </body>
 </html>
-
-
-
-
 
 @await RenderSectionAsync("Scripts", required: false)
 @RenderBody()
