--- a/Keyhanatr/Views/Account/GetMobile.cshtml
+++ b/Keyhanatr/Views/Account/GetMobile.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Keyhanatr.Data.ViewModel.Account.MobileViewModel
 
 @{
-    ViewData["Title"] = "GetMobile";
+    ViewData["Title"] = "دریافت شماره موبایل";
 }
 
 <div class="container py-4 py-lg-5 my-4">
