--- a/Keyhanatr/Views/Account/Login.cshtml
+++ b/Keyhanatr/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Keyhanatr.Data.ViewModels.Account.LoginViewModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "ورود به سایت";
 }
 
 <div class="container py-4 py-lg-5 my-4">
