--- a/Keyhanatr/Views/Account/Register.cshtml
+++ b/Keyhanatr/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Keyhanatr.Data.ViewModels.Account.RegisterViewModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "ثبت نام";
 }
 
 <div class="container py-4 py-lg-5 my-4">
