--- a/Keyhanatr/Views/Account/ResetPassword.cshtml
+++ b/Keyhanatr/Views/Account/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Keyhanatr.Data.ViewModel.Account.ResetPasswordViewModel
 
 @{
-    ViewData["Title"] = "ResetPassword";
+    ViewData["Title"] = "بازنشانی پسورد";
 }
 
 <div class="container py-4 py-lg-5 my-4">
