--- a/Keyhanatr/Views/Account/SuccessRegister.cshtml
+++ b/Keyhanatr/Views/Account/SuccessRegister.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Keyhanatr.Data.ViewModels.Account.RegisterViewModel
 
 @{
-    ViewData["Title"] = "SuccessRegister";
+    ViewData["Title"] = "ثبت موفق";
 }
 
 <div class="container py-4 py-lg-5 my-4">
