--- a/Keyhanatr/Views/Account/Active.cshtml
+++ b/Keyhanatr/Views/Account/Active.cshtml
@@ -1,6 +1,9 @@
 ﻿@model Keyhanatr.Data.ViewModel.Account.ActiveViewModel
 
-
+@{
+    Layout = "_Layout";
+    ViewData["Title"] = "کد فعالسازی";
+}
 <div class="container py-4 py-lg-5 my-4">
     <div class="row">
         <div class="col-md-6 offset-lg-3">
